--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -2,6 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:background="@color/info_background">
+    <ImageView
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_margin="@dimen/_15sdp"
+        android:id="@+id/img_back"
+        android:src="@drawable/ic_back"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,7 +40,7 @@
             android:layout_gravity="center"
             android:id="@+id/edit_email"
             android:hint="@string/email"
-            android:textColorHint="@color/hint_color"
+            android:textColorHint="@color/black"
             android:layout_marginStart="@dimen/_10sdp"
             android:background="@null"
             />
@@ -70,7 +77,7 @@
             android:inputType="textPassword"
             android:maxLines="1"
             android:maxLength="10"
-            android:textColorHint="@color/hint_color"
+            android:textColorHint="@color/black"
             android:layout_marginStart="@dimen/_10sdp"
             android:background="@null"
             />
