--- a/app/src/main/res/layout/layout_extra_item.xml
+++ b/app/src/main/res/layout/layout_extra_item.xml
@@ -3,38 +3,36 @@
     android:layout_width="match_parent" android:layout_height="wrap_content">
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_90sdp"
+    android:layout_height="@dimen/_60sdp"
     android:layout_margin="@dimen/_15sdp"
     android:padding="@dimen/_5sdp"
     android:id="@+id/relative_extra"
     android:background="@drawable/background_grey">
     <RelativeLayout
-        android:layout_width="@dimen/_80sdp"
-        android:layout_height="@dimen/_80sdp"
+        android:layout_width="@dimen/_40sdp"
+        android:layout_height="@dimen/_40sdp"
         android:layout_margin="@dimen/_10sdp"
         android:id="@+id/relative_extra_img"
-        android:visibility="invisible"
-        android:background="@drawable/edit_background">
+
+       >
         <ImageView
-            android:layout_width="@dimen/_60sdp"
-            android:layout_height="@dimen/_60sdp"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
             android:id="@+id/img_extra_item"
+            android:scaleType="fitXY"
             android:layout_centerInParent="true"
-            android:src="@drawable/img_dosa"/>
+            android:src="@drawable/ic_palceholder"/>
     </RelativeLayout>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:maxLength="10"
         android:maxLines="1"
         android:ellipsize="end"
         android:id="@+id/txt_extra_name"
         android:layout_marginEnd="@dimen/_5sdp"
-        android:layout_toStartOf="@+id/img_extra_check"
-        android:layout_toEndOf="@+id/relative_extra_img"
+       android:layout_centerHorizontal="true"
         android:textColor="@color/black"
         android:text="Item Name"/>
     <RelativeLayout
@@ -74,7 +72,7 @@ android:layout_below="@+id/txt_extra_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:id="@+id/txt_extra_price"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/txt_extra_name"
