--- a/app/src/main/res/layout/layout_menu_item.xml
+++ b/app/src/main/res/layout/layout_menu_item.xml
@@ -37,8 +37,8 @@
 
         <ImageView
             android:id="@+id/img_menu_item"
-            android:layout_width="@dimen/_100sdp"
-            android:layout_height="@dimen/_60sdp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/_15sdp"
             android:scaleType="fitCenter"
