--- a/app/src/main/res/drawable/ic_empty_cart.xml
+++ b/app/src/main/res/drawable/ic_empty_cart.xml
@@ -1,4 +1,9 @@
-<vector android:autoMirrored="true" android:height="24dp" android:viewportHeight="24"
-    android:viewportWidth="24" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/black" android:pathData="M22.73,22.73L2.77,2.77 2,2l-0.73,-0.73L0,2.54l4.39,4.39 2.21,4.66 -1.35,2.45c-0.16,0.28 -0.25,0.61 -0.25,0.96 0,1.1 0.9,2 2,2h7.46l1.38,1.38c-0.5,0.36 -0.83,0.95 -0.83,1.62 0,1.1 0.89,2 1.99,2 0.67,0 1.26,-0.33 1.62,-0.84L21.46,24l1.27,-1.27zM7.42,15c-0.14,0 -0.25,-0.11 -0.25,-0.25l0.03,-0.12 0.9,-1.63h2.36l2,2L7.42,15zM15.55,13c0.75,0 1.41,-0.41 1.75,-1.03l3.58,-6.49c0.08,-0.14 0.12,-0.31 0.12,-0.48 0,-0.55 -0.45,-1 -1,-1L6.54,4l9.01,9zM7,18c-1.1,0 -1.99,0.9 -1.99,2S5.9,22 7,22s2,-0.9 2,-2 -0.9,-2 -2,-2z"/>
+<vector android:autoMirrored="true" android:height="105.681dp"
+    android:viewportHeight="105.681" android:viewportWidth="105.422"
+    android:width="105.422dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#333" android:pathData="M80.712,94.68m-11,0a11,11 0,1 1,22 0a11,11 0,1 1,-22 0"/>
+    <path android:fillColor="#333" android:pathData="M36.712,94.68m-11,0a11,11 0,1 1,22 0a11,11 0,1 1,-22 0"/>
+    <path android:fillColor="#333" android:pathData="M90.048,79.066L39.353,79.066A15.413,15.413 0,0 1,24.278 66.71L13.573,13.178L2.2,13.178A2.2,2.2 0,0 1,2.2 8.785L15.374,8.785a2.2,2.2 0,0 1,2.152 1.766L28.587,65.845a11.007,11.007 0,0 0,10.766 8.829L90.048,74.674a2.2,2.2 0,0 1,0 4.393Z"/>
+    <path android:fillColor="#333" android:pathData="M96.514,49.543a2.178,2.178 0,0 0,-2.13 -0.057,28.136 28.136,0 0,1 -13.121,3.224c-15.743,0 -28.6,-11.9 -28.578,-28.007 0,-0.031 0.022,-0.452 0.026,-0.479A2.2,2.2 0,0 0,52.07 22.608,2.23 2.23,0 0,0 50.449,21.962L19.7,21.962A2.2,2.2 0,0 0,17.61 24.562l6.589,35.141a2.19,2.19 0,0 0,2.157 1.792L86.683,61.495a10.991,10.991 0,0 0,10.894 -9.62c0.013,-0.11 0.013,-0.387 0.013,-0.5A2.2,2.2 0,0 0,96.514 49.543Z"/>
+    <path android:fillColor="#333" android:pathData="M81.263,0A24.159,24.159 0,1 0,105.422 24.159,24.185 24.185,0 0,0 81.263,0ZM91.604,31.389a2.2,2.2 0,0 1,-3.11 3.11l-7.23,-7.235 -7.23,7.23a2.2,2.2 0,1 1,-3.11 -3.1l7.235,-7.235 -7.23,-7.23a2.2,2.2 0,0 1,3.106 -3.106l7.23,7.23 7.23,-7.23a2.2,2.2 0,0 1,3.106 3.106l-7.23,7.23Z"/>
 </vector>
