--- a/app/src/main/res/layout-sw720dp/layout_cancel_order.xml
+++ b/app/src/main/res/layout-sw720dp/layout_cancel_order.xml
@@ -82,13 +82,14 @@
 
                 android:background="@drawable/background_order_type"
                 android:orientation="vertical">
+
                 <ImageView
-                    android:layout_width="@dimen/_50sdp"
-                    android:layout_gravity="center"
-                    android:layout_height="@dimen/_50sdp"
                     android:id="@+id/img_dine"
+                    android:layout_width="@dimen/_25sdp"
+                    android:layout_height="@dimen/_25sdp"
+                    android:layout_gravity="center"
                     android:scaleType="centerInside"
-                    android:src="@drawable/ic_chicken_black"/>
+                    android:src="@drawable/ic_chicken_black" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -115,9 +116,9 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="@dimen/_50sdp"
+                    android:layout_width="@dimen/_25sdp"
                     android:layout_gravity="center"
-                    android:layout_height="@dimen/_50sdp"
+                    android:layout_height="@dimen/_25sdp"
                     android:scaleType="centerInside"
                     android:id="@+id/img_takeaway"
 
@@ -186,6 +187,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:id="@+id/linear_royalty_points"
             android:layout_below="@+id/txt_apply_coupon"
             android:background="@drawable/circle_background_green">
             <TextView
