--- a/app/src/main/res/layout-sw720dp/layout_extra_item.xml
+++ b/app/src/main/res/layout-sw720dp/layout_extra_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent" android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_90sdp"
+        android:layout_height="@dimen/_60sdp"
         android:layout_margin="@dimen/_15sdp"
         android:padding="@dimen/_5sdp"
         android:id="@+id/relative_extra"
@@ -11,19 +11,21 @@
 
         <RelativeLayout
             android:id="@+id/relative_extra_img"
-            android:layout_width="@dimen/_80sdp"
-            android:layout_height="@dimen/_80sdp"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_10sdp"
+            android:layout_marginStart="@dimen/_10sdp"
             android:background="@drawable/edit_background">
 
             <ImageView
                 android:id="@+id/img_extra_item"
-                android:layout_width="@dimen/_60sdp"
-                android:layout_height="@dimen/_60sdp"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:scaleType="centerCrop"
                 android:layout_centerInParent="true"
-                android:src="@drawable/img_dosa" />
+                android:src="@drawable/ic_palceholder" />
         </RelativeLayout>
         <TextView
             android:layout_width="wrap_content"
@@ -32,7 +34,7 @@
             android:layout_marginTop="@dimen/_10sdp"
             android:textSize="35sp"
             android:id="@+id/txt_extra_name"
-            android:layout_toEndOf="@+id/relative_extra_img"
+            android:layout_centerHorizontal="true"
             android:textColor="@color/black"
             android:text="Item Name"/>
         <RelativeLayout
@@ -75,7 +77,7 @@
             android:layout_gravity="center"
             android:textSize="30sp"
             android:layout_below="@+id/txt_extra_name"
-           android:layout_toEndOf="@+id/relative_extra_img"
+          android:layout_centerHorizontal="true"
             android:visibility="visible"
             android:id="@+id/txt_extra_price"
             android:textColor="@color/black"
