--- a/app/src/main/res/layout/layout_new_order_item.xml
+++ b/app/src/main/res/layout/layout_new_order_item.xml
@@ -16,7 +16,7 @@
         android:layout_width="@dimen/_50sdp"
         android:layout_height="@dimen/_50sdp"
         android:layout_centerInParent="true"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:id="@+id/img_order_dish"
         android:src="@drawable/img_dosa"/>
 
