--- a/app/src/main/res/layout-sw600dp/differentsize_item.xml
+++ b/app/src/main/res/layout-sw600dp/differentsize_item.xml
@@ -3,8 +3,11 @@
     android:layout_width="wrap_content" android:layout_height="wrap_content">
     <TextView
         android:id="@+id/txt_sizes"
-        android:layout_width="@dimen/_50sdp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxLength="20"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:layout_margin="@dimen/_5sdp"
         android:background="@drawable/background_grey_stroke"
         android:gravity="center"
