--- a/app/src/main/res/layout-sw720dp/dialog_redeem.xml
+++ b/app/src/main/res/layout-sw720dp/dialog_redeem.xml
@@ -48,15 +48,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt_coupon_code"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_marginStart="@dimen/_20sdp"
-        android:weightSum="2">
+       >
         <EditText
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1.4"
             android:padding="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_15sdp"
             android:textSize="35sp"
             android:inputType="text"
             android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz 1234567890"
@@ -66,14 +66,14 @@
             android:hint="@string/coupon_code"
             android:background="@drawable/background_edit_grey"/>
         <TextView
-            android:layout_width="0dp"
-            android:layout_weight="0.6"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:layout_margin="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_15sdp"
             android:padding="@dimen/_10sdp"
 
-            android:textSize="30sp"
+            android:textSize="35sp"
             android:gravity="center"
             android:id="@+id/txt_apply"
             android:textColor="@color/white"
