--- a/app/src/main/res/layout-sw600dp/layout_menu_screen.xml
+++ b/app/src/main/res/layout-sw600dp/layout_menu_screen.xml
@@ -261,7 +261,18 @@
         android:background="@drawable/ic_logo"
         android:layout_alignParentEnd="true">
 
-
+        <TextView
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_alignParentEnd="true"
+            android:id="@+id/txt_cart_number"
+            android:text="2"
+            android:gravity="center"
+            android:textSize="25sp"
+            android:elevation="@dimen/_10sdp"
+            android:visibility="gone"
+            android:textColor="@color/white"
+            android:background="@drawable/cart_number"/>
 
         <ImageView
             android:layout_width="@dimen/_30sdp"
