--- a/app/src/main/res/layout-sw720dp/layout_cart.xml
+++ b/app/src/main/res/layout-sw720dp/layout_cart.xml
@@ -186,6 +186,12 @@ android:layout_marginTop="@dimen/_10sdp"
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="gone"
+                android:id="@+id/progress_toppings"/>
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
