--- a/app/src/main/res/layout-sw720dp/layout_menu_screen.xml
+++ b/app/src/main/res/layout-sw720dp/layout_menu_screen.xml
@@ -256,7 +256,17 @@
         android:padding="@dimen/_5sdp"
         android:background="@drawable/ic_logo"
         android:layout_alignParentEnd="true">
-
+        <TextView
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_alignParentEnd="true"
+            android:id="@+id/txt_cart_number"
+            android:text="2"
+            android:gravity="center"
+            android:textSize="25sp"
+            android:visibility="gone"
+            android:elevation="@dimen/_10sdp"
+            android:textColor="@color/white"/>
 
 
         <ImageView
