--- a/app/src/main/res/layout/layout_cart.xml
+++ b/app/src/main/res/layout/layout_cart.xml
@@ -202,6 +202,12 @@ android:layout_below="@+id/relative_cart"
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="gone"
+                android:id="@+id/progress_toppings"/>
 
 
         <androidx.recyclerview.widget.RecyclerView
