Worked on changes suggested on whatsapp

--- a/app/src/main/res/layout-sw600dp/customer_info.xml
+++ b/app/src/main/res/layout-sw600dp/customer_info.xml
@@ -81,17 +81,17 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/_5sdp"
         android:background="@color/color_orange"
-        android:layout_below="@+id/linear_phone"
+        android:layout_below="@+id/txt_login_txt"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/_25sdp"
-        android:textSize="40sp"
+        android:textSize="35sp"
         android:text="@string/guest_user"
         android:textColor="@color/white"
         android:id="@+id/btn_guest"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_guest"
+        android:layout_below="@+id/linear_phone"
         android:textColor="@color/white"
         android:textSize="25sp"
 
@@ -104,7 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt_login"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:gravity="center"
         android:layout_marginStart="@dimen/_15sdp"
         android:layout_marginEnd="@dimen/_15sdp"
