--- a/app/src/main/res/layout-sw600dp/layout_menu_item.xml
+++ b/app/src/main/res/layout-sw600dp/layout_menu_item.xml
@@ -12,6 +12,7 @@
         android:layout_marginStart="@dimen/_5sdp"
         android:layout_marginEnd="@dimen/_5sdp"
         android:layout_marginBottom="@dimen/_5sdp"
+        android:id="@+id/relative_menu"
         android:background="@drawable/edit_background"
         android:elevation="@dimen/_5sdp"
         android:padding="@dimen/_4sdp">
