--- a/app/src/main/res/layout/customer_info.xml
+++ b/app/src/main/res/layout/customer_info.xml
@@ -27,7 +27,7 @@ android:id="@+id/linear_name"
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="29sp"
+        android:textSize="20sp"
         android:inputType="text"
         android:maxLength="20"
         android:maxLines="1"
@@ -64,7 +64,7 @@ android:id="@+id/linear_name"
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="29sp"
+            android:textSize="20sp"
             android:textColor="@color/info_background"
             android:layout_gravity="center"
             android:id="@+id/edit_phone"
@@ -82,7 +82,7 @@ android:id="@+id/linear_name"
         android:layout_height="wrap_content"
         android:padding="@dimen/_5sdp"
         android:background="@color/color_orange"
-        android:layout_below="@+id/linear_phone"
+        android:layout_below="@+id/txt_login_txt"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/_25sdp"
         android:textSize="20sp"
@@ -92,7 +92,7 @@ android:id="@+id/linear_name"
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_guest"
+        android:layout_below="@+id/linear_phone"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:gravity="center"
