--- a/app/src/main/res/layout/layout_menu_item.xml
+++ b/app/src/main/res/layout/layout_menu_item.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/_4sdp"
         android:elevation="@dimen/_5sdp"
+        android:id="@+id/relative_menu"
         android:layout_margin="@dimen/_5sdp"
         android:background="@drawable/edit_background">
         <TextView
