--- a/app/src/main/res/layout-sw720dp/layout_menu_item.xml
+++ b/app/src/main/res/layout-sw720dp/layout_menu_item.xml
@@ -2,10 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="@dimen/_4sdp"
-    android:elevation="@dimen/_5sdp"
-    android:background="@drawable/edit_background"
-    android:layout_margin="@dimen/_5sdp">
+   >
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_5sdp"
+        android:layout_marginEnd="@dimen/_5sdp"
+        android:layout_marginBottom="@dimen/_5sdp"
+        android:id="@+id/relative_menu"
+        android:background="@drawable/edit_background"
+        android:elevation="@dimen/_5sdp"
+        android:padding="@dimen/_4sdp">
     <ImageView
         android:layout_width="@dimen/_20sdp"
         android:layout_height="@dimen/_20sdp"
@@ -80,5 +87,6 @@
             android:text="Add"/>
 
     </RelativeLayout>
+        </RelativeLayout>
 
 </RelativeLayout>
