--- a/app/src/main/res/layout/layout_extra_item.xml
+++ b/app/src/main/res/layout/layout_extra_item.xml
@@ -3,8 +3,11 @@
     android:layout_width="match_parent" android:layout_height="wrap_content">
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_60sdp"
-    android:layout_margin="@dimen/_15sdp"
+    android:layout_height="@dimen/_50sdp"
+    android:layout_marginStart="@dimen/_15sdp"
+    android:layout_marginEnd="@dimen/_15sdp"
+    android:layout_marginTop="@dimen/_5sdp"
+    android:layout_marginBottom="@dimen/_5sdp"
     android:padding="@dimen/_5sdp"
     android:id="@+id/relative_extra"
     android:background="@drawable/background_grey">
@@ -16,8 +19,8 @@
 
        >
         <ImageView
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
             android:id="@+id/img_extra_item"
             android:scaleType="fitXY"
             android:layout_centerInParent="true"
@@ -26,7 +29,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:maxLength="10"
         android:maxLines="1"
         android:ellipsize="end"
@@ -72,16 +75,17 @@ android:layout_below="@+id/txt_extra_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textSize="20sp"
+        android:textSize="16sp"
+
         android:id="@+id/txt_extra_price"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/txt_extra_name"
         android:visibility="visible"
-        android:textColor="@color/black"
+        android:textColor="@color/cart_empty"
         android:text="$15.00"/>
     <ImageView
-        android:layout_width="@dimen/_30sdp"
-        android:layout_height="@dimen/_30sdp"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_20sdp"
         android:id="@+id/img_extra_check"
         android:layout_centerVertical="true"
         android:src="@drawable/ic_check_icon"
