--- a/app/src/main/res/layout-sw600dp/layout_extra_item.xml
+++ b/app/src/main/res/layout-sw600dp/layout_extra_item.xml
@@ -4,7 +4,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/_60sdp"
-        android:layout_margin="@dimen/_15sdp"
+        android:layout_marginStart="@dimen/_15sdp"
+        android:layout_marginEnd="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:layout_marginBottom="@dimen/_5sdp"
         android:padding="@dimen/_5sdp"
         android:id="@+id/relative_extra"
         android:background="@drawable/background_grey">
@@ -15,8 +18,8 @@
             android:id="@+id/relative_extra_img"
             android:background="@drawable/edit_background">
             <ImageView
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
                 android:id="@+id/img_extra_item"
                 android:scaleType="centerCrop"
                 android:layout_centerInParent="true"
@@ -74,11 +77,11 @@ android:visibility="gone"
             android:layout_below="@+id/txt_extra_name"
             android:visibility="visible"
             android:layout_centerHorizontal="true"
-            android:textColor="@color/black"
+            android:textColor="@color/cart_empty"
             android:text="$15.00"/>
         <ImageView
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
             android:id="@+id/img_extra_check"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_check_icon"
