--- a/app/src/main/res/layout-sw720dp/layout_extra_item.xml
+++ b/app/src/main/res/layout-sw720dp/layout_extra_item.xml
@@ -4,15 +4,18 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/_60sdp"
-        android:layout_margin="@dimen/_15sdp"
+        android:layout_marginStart="@dimen/_15sdp"
+        android:layout_marginEnd="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:layout_marginBottom="@dimen/_5sdp"
         android:padding="@dimen/_5sdp"
         android:id="@+id/relative_extra"
         android:background="@drawable/background_grey">
 
         <RelativeLayout
             android:id="@+id/relative_extra_img"
-            android:layout_width="@dimen/_40sdp"
-            android:layout_height="@dimen/_40sdp"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_10sdp"
@@ -21,8 +24,8 @@
 
             <ImageView
                 android:id="@+id/img_extra_item"
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
                 android:scaleType="centerCrop"
                 android:layout_centerInParent="true"
                 android:src="@drawable/ic_palceholder" />
@@ -80,11 +83,11 @@
           android:layout_centerHorizontal="true"
             android:visibility="visible"
             android:id="@+id/txt_extra_price"
-            android:textColor="@color/black"
+            android:textColor="@color/cart_empty"
             android:text="$15.00"/>
         <ImageView
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
             android:id="@+id/img_extra_check"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_check_icon"
