--- a/app/src/main/res/layout-sw600dp/customer_info.xml
+++ b/app/src/main/res/layout-sw600dp/customer_info.xml
@@ -77,12 +77,12 @@
             />
     </LinearLayout>
     <Button
-        android:layout_width="@dimen/_130sdp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/_5sdp"
         android:background="@color/color_orange"
-        android:layout_below="@+id/txt_login_txt"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+
         android:layout_marginTop="@dimen/_25sdp"
         android:textSize="35sp"
         android:text="@string/guest_user"
