--- a/app/src/main/res/layout-sw720dp/layout_extra_item.xml
+++ b/app/src/main/res/layout-sw720dp/layout_extra_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent" android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_60sdp"
+        android:layout_height="@dimen/_40sdp"
         android:layout_marginStart="@dimen/_15sdp"
         android:layout_marginEnd="@dimen/_15sdp"
         android:layout_marginTop="@dimen/_5sdp"
@@ -18,6 +18,7 @@
             android:layout_height="@dimen/_30sdp"
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
+            android:visibility="gone"
             android:layout_marginBottom="@dimen/_10sdp"
             android:layout_marginStart="@dimen/_10sdp"
             android:background="@drawable/edit_background">
@@ -34,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_centerVertical="true"
             android:textSize="35sp"
             android:id="@+id/txt_extra_name"
             android:layout_centerHorizontal="true"
@@ -79,20 +80,20 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textSize="30sp"
-            android:layout_below="@+id/txt_extra_name"
-          android:layout_centerHorizontal="true"
+            android:layout_alignParentEnd="true"
+         android:layout_centerVertical="true"
             android:visibility="visible"
             android:id="@+id/txt_extra_price"
             android:textColor="@color/cart_empty"
             android:text="$15.00"/>
         <ImageView
-            android:layout_width="@dimen/_25sdp"
-            android:layout_height="@dimen/_25sdp"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
             android:id="@+id/img_extra_check"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_check_icon"
             android:layout_marginEnd="@dimen/_15sdp"
-            android:layout_alignParentEnd="true"/>
+            android:layout_alignParentStart="true"/>
 
     </RelativeLayout>
 
