--- a/app/src/main/res/layout/extra_item_radio.xml
+++ b/app/src/main/res/layout/extra_item_radio.xml
@@ -11,38 +11,45 @@
         android:padding="@dimen/_5sdp"
         android:id="@+id/relative_extra"
         android:background="@drawable/background_grey">
+
         <RelativeLayout
-            android:layout_width="@dimen/_40sdp"
-            android:layout_height="@dimen/_40sdp"
-            android:layout_margin="@dimen/_10sdp"
             android:id="@+id/relative_extra_img"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
             android:visibility="gone"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:layout_marginStart="@dimen/_10sdp"
             android:background="@drawable/edit_background">
+
             <ImageView
+                android:id="@+id/img_extra_item"
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="@dimen/_20sdp"
-                android:id="@+id/img_extra_item"
                 android:scaleType="centerCrop"
                 android:layout_centerInParent="true"
-                android:src="@drawable/ic_palceholder"/>
+                android:src="@drawable/ic_palceholder" />
         </RelativeLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:textSize="25sp"
-            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:layout_centerVertical="true"
+            android:textSize="35sp"
             android:id="@+id/txt_extra_name"
+            android:layout_centerHorizontal="true"
             android:textColor="@color/black"
             android:text="Item Name"/>
         <RelativeLayout
             android:layout_width="@dimen/_100sdp"
             android:layout_height="wrap_content"
-android:visibility="gone"
+            android:visibility="gone"
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_toEndOf="@+id/relative_extra_img"
             android:layout_below="@+id/txt_extra_name"
             android:padding="@dimen/_5sdp"
+
             android:id="@+id/relative_count"
 
             >
@@ -51,18 +58,18 @@ android:visibility="gone"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:id="@+id/txt_count"
-                android:textSize="20sp"
+                android:textSize="30sp"
 
                 android:text="1"
                 android:layout_centerInParent="true"/>
             <ImageView
-                android:layout_width="@dimen/_20sdp"
-                android:layout_height="@dimen/_20sdp"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
                 android:id="@+id/img_less"
                 android:src="@drawable/ic_minus"/>
             <ImageView
-                android:layout_width="@dimen/_20sdp"
-                android:layout_height="@dimen/_20sdp"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
                 android:layout_alignParentEnd="true"
                 android:id="@+id/img_more"
                 android:src="@drawable/ic_plus"/>
@@ -72,20 +79,19 @@ android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="25sp"
-            android:id="@+id/txt_extra_price"
-           android:layout_alignParentEnd="true"
-            android:visibility="visible"
+            android:textSize="30sp"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
+            android:visibility="visible"
+            android:id="@+id/txt_extra_price"
             android:textColor="@color/cart_empty"
             android:text="$15.00"/>
-        <ImageView
+        <RadioButton
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
-            android:id="@+id/img_extra_check"
+            android:id="@+id/img_extra_radio"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_check_icon"
+
             android:layout_marginEnd="@dimen/_15sdp"
             android:layout_alignParentStart="true"/>
 
