--- a/app/src/main/res/layout-sw600dp/layout_cart.xml
+++ b/app/src/main/res/layout-sw600dp/layout_cart.xml
@@ -178,8 +178,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/condiments"
-            android:textSize="25sp"
-
+            android:textSize="30sp"
+            android:visibility="gone"
+            android:id="@+id/txt_top_head"
             android:textColor="@color/black"
             android:layout_marginStart="@dimen/_15sdp"
             android:gravity="center"/>
