--- a/app/src/main/res/layout-sw720dp/layout_cart.xml
+++ b/app/src/main/res/layout-sw720dp/layout_cart.xml
@@ -178,7 +178,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/condiments"
-            android:textSize="32sp"
+            android:textSize="40sp"
+            android:visibility="gone"
+            android:id="@+id/txt_top_head"
 android:layout_marginTop="@dimen/_10sdp"
             android:textColor="@color/black"
             android:layout_marginStart="@dimen/_15sdp"
