--- a/app/src/main/res/layout/extra_item_radio.xml
+++ b/app/src/main/res/layout/extra_item_radio.xml
@@ -5,7 +5,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_15sdp"
         android:layout_marginEnd="@dimen/_15sdp"
         android:layout_marginTop="@dimen/_5sdp"
@@ -34,13 +34,14 @@
                 android:src="@drawable/ic_palceholder" />
         </RelativeLayout>
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_centerVertical="true"
             android:textSize="20sp"
             android:id="@+id/txt_extra_name"
-            android:layout_centerHorizontal="true"
+            android:layout_toStartOf="@+id/txt_extra_price"
+            android:layout_toEndOf="@+id/img_extra_radio"
             android:textColor="@color/black"
             android:text="Item Name"/>
         <RelativeLayout
@@ -94,6 +95,7 @@
             android:id="@+id/img_extra_radio"
             android:layout_centerVertical="true"
 android:buttonTint="@color/color_add"
+            android:clickable="false"
             android:layout_marginEnd="@dimen/_15sdp"
             android:layout_alignParentStart="true"/>
 
