--- a/app/src/main/res/layout/layout_thankyou.xml
+++ b/app/src/main/res/layout/layout_thankyou.xml
@@ -5,6 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
+    <ImageView
+        android:layout_width="@dimen/_25sdp"
+        android:layout_height="@dimen/_25sdp"
+        android:layout_marginStart="@dimen/_15sdp"
+        android:src="@drawable/img_arrow_lack"
+        android:id="@+id/img_back"
+        />
     <LinearLayout
         android:layout_width="@dimen/_100sdp"
         android:layout_height="@dimen/_100sdp"
