--- a/app/src/main/res/layout-sw720dp/layout_menu_screen.xml
+++ b/app/src/main/res/layout-sw720dp/layout_menu_screen.xml
@@ -6,7 +6,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txt_no_data"
+        android:visibility="gone"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_margin="@dimen/_15sdp"
+        android:textColor="@color/color_add"
+        android:layout_centerInParent="true"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -284,6 +294,7 @@
         android:layout_height="@dimen/_80sdp"
         android:layout_alignParentBottom="true"
         android:padding="@dimen/_5sdp"
+        android:id="@+id/relative_logout"
         android:background="@drawable/ic_logo"
         android:layout_alignParentStart="true">
 
