--- a/app/src/main/res/layout/layout_menu_screen.xml
+++ b/app/src/main/res/layout/layout_menu_screen.xml
@@ -5,7 +5,17 @@
     android:background="@color/color_menu_background"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/txt_no_data"
+    android:visibility="gone"
+    android:gravity="center"
+    android:layout_margin="@dimen/_15sdp"
+    android:textSize="25sp"
+    android:textStyle="bold"
+    android:textColor="@color/color_add"
+    android:layout_centerInParent="true"/>
 
 
         <RelativeLayout
@@ -297,6 +307,7 @@ android:layout_centerInParent="true"
         android:layout_height="@dimen/_60sdp"
         android:layout_alignParentBottom="true"
         android:padding="@dimen/_5sdp"
+        android:id="@+id/relative_logout"
         android:background="@drawable/ic_logo"
         android:layout_alignParentStart="true">
 
